OSG Change log
==============

  o Placed #ifdef USE_DEPRECATED_MATRIX_METHODS about pre/postScale,
    pre/postTrans and pre/postRot methods since these are now 
    deprecated, there functionality replace by scale,trans,rotate
    static methods which create matices to do pre and post multiplication
    by.  Converted the rest of the OSG to use thse new methods.
  o Converted hangglide to use the sky and base as an earth/sky implementation
    which replaces the standard glClear done in RenderStage, therefore 
    reducing the fill rate requirements for each frame, and increasing
    performance.  The technique uses multiple rendering bin to force
    the drawing of the sky first, base second and then rest of the
    scene graph afterwards.  The first two bins draw use osg::Depth
    state attribute to control glDepthFunc/Mask/Range so as to write
    to the far plane.
  o Fixed erroneous message in osgreflect.

21th September 2001 - osg-20010921.tar.gz

  o Fixed compilation problem under Windows due to ctime being included
    in the osg::Timer header file.  The ctime refrence has been replaced
    by time.h. Also fixed typo in osgGLUT/Viewer.cpp which was causing
    compilation problems.
  o Made the new osg::Matrix::translate/scale/rotate static method inline
    to help improve peformance.
  o Fixed bugs in osg::Matrix::preMult and postMult.
  

19th September 2001 - osg-20010919.tar.gz

  o Cleaned up the implementation of the osg::Timer class so it is easy
    to read and maintain, and have added support for gettimeofday under
    unix OS's where no other realtime timer is available, if this isn't
    available either than 
  o Added FrameStamp class which encapsulates the frame number,
    reference time and the calander time that a frame in schedualed.
  o Fixed a couple of bugs & integrated further fixes from Paul Fredrikson,
    to the new Matrix implemention, double checked results against the old